<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>molecular</class>
 <widget class="QWidget" name="molecular">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Molecular</string>
  </property>
  <widget class="QWidget" name="gridLayoutWidget">
   <property name="geometry">
    <rect>
     <x>70</x>
     <y>0</y>
     <width>731</width>
     <height>421</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="molec_sens_layout">
    <property name="leftMargin">
     <number>300</number>
    </property>
    <item row="0" column="0">
     <widget class="QCheckBox" name="temper_btn">
      <property name="text">
       <string>Датчик температуры</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QCheckBox" name="pressure_btn">
      <property name="text">
       <string>Датчик давления</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QCheckBox" name="obj_btn">
      <property name="text">
       <string>Датчик объема</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QPushButton" name="back_button">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>71</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>Назад</string>
   </property>
  </widget>
  <widget class="QPushButton" name="submit">
   <property name="geometry">
    <rect>
     <x>330</x>
     <y>480</y>
     <width>191</width>
     <height>61</height>
    </rect>
   </property>
   <property name="text">
    <string>Принять</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
